tests/compile_fail/invalid_revert_layer_value.rs
use surgeist_style::{Keyword, Value};

fn main() {
    let _value = Value::Keyword(Keyword::RevertLayer);
}
